--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -20,7 +20,7 @@ body {
     color: #1b1b1b;
   }
 
-  input[type='search'] {
+  input[type='text'] {
     -webkit-appearance: none;
     border: 1px solid gray;
     border-right: none;
